logic in progress

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,7 +25,7 @@
             <br>
 
             <div>
-                <a href="../public/survey.html"><button class="btn btn-lg btn-primary" style="background-color: #337ab7"><span
+                <a href="/survey"><button class="btn btn-lg btn-primary" style="background-color: #337ab7"><span
                             class="fa fa-list-alt"></span> Take the survey now!</button></a>
             </div>
 
