--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -34,13 +34,13 @@
             <option value="1">1 (Strongly disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 2</h3>
 
@@ -49,13 +49,13 @@
             <option value="1">1 (Strongly disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 3</h3>
 
@@ -64,118 +64,118 @@
             <option value="1">1 (Strongly disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 4</h3>
 
         <select class="chosen-select " id="q4">
-            <option selected>Select an option</option>
+                <option selected>Select an option</option>
             <option value="1">1 (Strongly disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 5</h3>
 
         <select class="chosen-select " id="q5">
-            <option selected>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 6</h3>
 
         <select class="chosen-select " id="q6">
-            <option selected>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 7</h3>
 
         <select class="chosen-select " id="q7">
-            <option selected>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 8</h3>
 
         <select class="chosen-select " id="q8">
-            <option selected>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 9</h3>
 
         <select class="chosen-select " id="q9">
-            <option value>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <h3>Question 10</h3>
 
         <select class="chosen-select " id="q10">
-            <option selected>Select an option</option>
-            <option value="1">1 (Strongly disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="3">4</option>
-            <option value="3">5</option>
-            <option value="3">6</option>
-            <option value="3">7</option>
-            <option value="3">8</option>
-            <option value="3">9</option>
-            <option value="3">10 (Strongly agree)</option>
+                <option selected>Select an option</option>
+                <option value="1">1 (Strongly disagree)</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10 (Strongly agree)</option>
         </select>
         <br>
         <br>
@@ -205,24 +205,35 @@
         event.preventDefault();
 
 
-        var scoreArr = [];
-        for (var i = 1; i < 11; i++) {
-            scoreArr.push(parseInt($("#q") + i).val());
-        };
+
 
         var newFriend = {
             name: $("#friend-name").val().trim(),
             photo: $("#friend-photo").val().trim(),
-            score: scoreArr
+            score: [
+                parseInt($("#q1").val()),
+                parseInt($("#q2").val()),
+                parseInt($("#q3").val()),
+                parseInt($("#q4").val()),
+                parseInt($("#q5").val()),
+                parseInt($("#q6").val()),
+                parseInt($("#q7").val()),
+                parseInt($("#q8").val()),
+                parseInt($("#q9").val()),
+                parseInt($("#q10").val()),
+
+            ]
 
         };
 
-        console.log(newFriend);
 
 
 
-        $.post("/api/friends", newFriend)
-            .then(function (data) {
+
+        $.post("/api/friends", newFriend,
+            function (data) {
+                console.log("HERE IS WHERE IT IS");
+                console.log(data)
 
                 if (data) {
                     console.log("You've successfully applied for a friend!");
@@ -236,7 +247,7 @@
                 $("#friend-name").val("");
                 $("#friend-photo").val("");
 
-            })
+            });
 
     })
 
